[project]
name = "sheet-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "gymnasium>=1.2.2",
    "matplotlib>=3.7.1",
    "pandas>=1.5.3",
    "scipy>=1.9.3",
    "tqdm>=4.65.0",
    "seaborn>=0.13.2",
]
